// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table with everything 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 dvrgBW"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 kngHIX"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 iEwgEs"
            scope="col"
            width="30px"
          >
            <div
              class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
            >
              <label
                class="ClickInputLabel-j2axnv-0 hdKIjC"
              >
                <input
                  aria-invalid="false"
                  aria-label="deselect all"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                />
              </label>
            </div>
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 iEwgEs"
            scope="col"
            width="30px"
          />
          <th
            class="StyledTh-sc-10nzyk9-0 jzRkfM"
            scope="col"
            width="15%"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 jzYsmw"
            scope="col"
            width="20%"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 jzYsmw"
            scope="col"
            width="20%"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 jAqzSn"
            scope="col"
            width="45%"
          >
            Note
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 iiuyMH"
            scope="col"
            width="5%"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            colspan="7"
          >
            <div
              class="Box-sc-1qu1edy-0 fGWNgD"
            >
              <p
                class="sc-AykKF eruAHZ"
                color="blackBlue"
                font-size="16px"
                font-weight="bold"
              >
                ABC & XYZ Company
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            <div
              class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
            >
              <label
                class="ClickInputLabel-j2axnv-0 hdKIjC"
              >
                <input
                  aria-invalid="false"
                  aria-label="deselect row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            <button
              aria-label="expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 fMjedc"
            >
              <svg
                aria-hidden="true"
                class="sc-AykKD ceXkCz"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            Tue, 01 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            1,800 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 dqSmZd"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 hgEYuX sc-fzXfLQ bZudva"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="sc-AykKD kaUxeX"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            <div
              class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
            >
              <label
                class="ClickInputLabel-j2axnv-0 hdKIjC"
              >
                <input
                  aria-invalid="false"
                  aria-label="deselect row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            Wed, 02 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,250 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 dqSmZd"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 hgEYuX sc-fzXfLQ bZudva"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="sc-AykKD kaUxeX"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            <div
              class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
            >
              <label
                class="ClickInputLabel-j2axnv-0 hdKIjC"
              >
                <input
                  aria-invalid="false"
                  aria-label="deselect row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            Thu, 03 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            1,425 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 dqSmZd"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 hgEYuX sc-fzXfLQ bZudva"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="sc-AykKD kaUxeX"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            <div
              class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
            >
              <label
                class="ClickInputLabel-j2axnv-0 hdKIjC"
              >
                <input
                  aria-invalid="false"
                  aria-label="deselect row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            Fri, 04 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            675 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            1c Other Plant-related issue, equipment issues
          </td>
          <td>
            <div
              class="Box-sc-1qu1edy-0 dqSmZd"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 hgEYuX sc-fzXfLQ bZudva"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="sc-AykKD kaUxeX"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 czwijJ"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 cmwBAa"
            colspan="3"
            scope="row"
          >
            Total
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            18,000 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            7,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
        </tr>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 czwijJ"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 cmwBAa"
            colspan="3"
            scope="row"
          >
            Attainment
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            41.5%
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          />
        </tr>
      </tfoot>
    </table>
    <nav
      aria-label="pagination navigation"
      class="Box-sc-1qu1edy-0 sc-AykKC htLZb"
    >
      <button
        aria-label="go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 hWNkwR"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD dKbtnU"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL ikgQRY"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="go to page 2"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="go to page 3"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        3
      </button>
      <button
        aria-label="go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kDWqWC"
      >
        Next 
        <svg
          aria-hidden="true"
          class="sc-AykKD faeHcD"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Table with pagination 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 dvrgBW"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 kngHIX"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 cmwBAa"
            scope="col"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 cmwBAa"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 cmwBAa"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-0 gVJELy"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 iZwXyP"
          >
            1,800 eaches
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
    <nav
      aria-label="pagination navigation"
      class="Box-sc-1qu1edy-0 sc-AykKC htLZb"
    >
      <button
        aria-label="go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 hWNkwR"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD dKbtnU"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL ikgQRY"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="go to page 2"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="go to page 3"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        3
      </button>
      <button
        aria-current="false"
        aria-label="go to page 4"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        4
      </button>
      <button
        aria-current="false"
        aria-label="go to page 5"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        5
      </button>
      <p
        class="sc-AykKF deuCmq"
        color="currentColor"
        font-size="small"
      >
        ...
      </p>
      <button
        aria-current="false"
        aria-label="go to page 8"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 sc-fzXfNL fHUOFU"
      >
        8
      </button>
      <button
        aria-label="go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kDWqWC"
      >
        Next 
        <svg
          aria-hidden="true"
          class="sc-AykKD faeHcD"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;
